--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.0",
+    "@nestjs/websockets": "^8.4.4",
     "bcrypt": "^5.0.1",
     "mongoose": "^6.2.2",
     "reflect-metadata": "^0.1.13",
