--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/websockets": "^8.4.4",
+    "@types/cookie": "^0.4.1",
     "bcrypt": "^5.0.1",
+    "cookie": "^0.5.0",
     "mongoose": "^6.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
